[Vertical spacing fixed for many of the apps]

--- a/quantum-hub/src/components/Widget/Sudoku/sudoku.css
+++ b/quantum-hub/src/components/Widget/Sudoku/sudoku.css
@@ -122,15 +122,16 @@ div, p {margin:0px; padding:0px;}
   display: block;
   position: relative;
   margin: auto;
-  width: 100%;
-  padding-top: 100%;
+  width: 90%;
+  padding-top: 90%;
 }
 
 .sudokuBox.loading{
   display: flex;
   justify-content: center;
-  padding-top: calc((462.05px - 68px ) / 2);
-  padding-bottom: calc((462.05px - 68px ) / 2);
+  padding-top: calc(45% - 34px);
+  padding-bottom: calc(45% - 34px);
+  /* padding-bottom: calc((462.05px - 68px ) / 2); */
   opacity: 0.65;
 }
 
